data/forge_javadoc/1.9.4/raw/net/minecraft/client/renderer/entity/RenderShulker.md
---
title: "RenderShulker"
description: "public class RenderShulker extends RenderLiving<EntityShulker>"
package: "net/minecraft/client/renderer/entity"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/renderer/entity/RenderShulker.html"
sourceType: javadoc
---

# RenderShulker

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render<T> → net.minecraft.client.renderer.entity.RenderLivingBase<T> → net.minecraft.client.renderer.entity.RenderLiving<EntityShulker> → net.minecraft.client.renderer.entity.RenderShulker

## Class signature

```java
public class RenderShulker extends RenderLiving<EntityShulker>
```

## Methods

- `void doRender(EntityShulker entity, double x, double y, double z, float entityYaw, float partialTicks)`
- `protected ResourceLocation getEntityTexture(EntityShulker entity)`
- `protected void preRenderCallback(EntityShulker entitylivingbaseIn, float partialTickTime)`
- `protected void rotateCorpse(EntityShulker entityLiving, float p_77043_2_, float p_77043_3_, float partialTicks)`
- `boolean shouldRender(EntityShulker livingEntity, ICamera camera, double camX, double camY, double camZ)`

## Fields

- `RenderShulker`
